Serbian (Latin) and Serbian (Cyrillic) locales are interpreted as Croatian in Windows. Bug 234865, r=jshin, sr=neil